update release scripts

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-pro": "concurrently \"npm run build-main-pro\" \"npm run build-renderer-pro\"",
     "build-package": "build --publish never",
     "package": "rm -rf build && npm run build-pro && build --publish never",
+    "package-release": "rm -rf build && npm run build-pro && build -ml --publish always",
     "package-all": "npm run build-pro && build -mwl",
     "package-linux": "npm run build-pro && build --linux",
     "package-win": "npm run build-pro && build --win --x64"
